Setup Dockerized backend with MySQL and JWT authentication